Secuity Control Inventory

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #1d2630;
+    background: #141516;
     color: #fff;
 }
 
@@ -9,12 +9,36 @@ body {
 
 /* Styling for table header */
 #crudTable th {
-    background-color: #1d2630;
+    background-color: #23262a;
     color: #fff; /* Set text color if needed */
 }
 
 /* Styling for table rows */
 #crudTable td {
-    background-color: #1d2630;
+    background-color: #32383e;
     color: #fff; /* Set text color if needed */
+}
+
+/* Add this to your style.css file */
+.disabled-button {
+    pointer-events: none; /* Prevent clicks */
+    opacity: 0.5; /* Visually indicate disabled state */
+  }
+
+/* Highlight style for the edited row */
+#crudTable tbody tr.edit-highlight td {
+    background-color: #788ea8; /* Light gray background */
+    color: #000; /* Set text color as needed */
+}
+
+.btn-sm {
+    padding: 0.2rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+
+/* Custom style to display buttons inline */
+td button {
+    display: inline-block;
 }
